--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -11,10 +11,12 @@
     display: flex;
     border: 0.5px solid #4F4F4F;
 }
+
 .headerContent .searchBar input {
-   border: none;
-   width: 250px;
+    border: none;
+    width: 250px;
 }
+
 .headerContent .searchBar svg {
     margin: auto 14px;
 
@@ -28,4 +30,105 @@
 .menu .menuItem {
     margin: auto 15px;
     height: fit-content;
+}
+
+.nav {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    justify-content: space-between;
+    flex-shrink: 0;
+}
+
+.nav p1 {
+    margin: auto 0;
+    color: #F4811F;
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.nav p2 {
+    margin: auto 0;
+    color: var(--Gray-2, #4F4F4F);
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.layer1 {
+    position: relative;
+    width: 100%;
+    height: 700px;
+}
+
+.layer1 img {
+    width: 100%;
+    height: 700px;
+}
+
+.box {
+    width: 464px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: white;
+    position: absolute;
+    padding: 30px;
+    top: 25%;
+}
+
+.box .content button {
+    padding: 15px 7px;
+    background-color: black;
+    color: white;
+    display: flex;
+    border-radius: 5px;
+}
+
+.slider{
+    width: 128px;
+    height: 0px;
+    flex-shrink: 0;
+    position: absolute;
+    top: 94%;
+}
+.layer3 label{
+    position: absolute;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 3px;
+    padding-right: 40px;
+    background-color: white;
+    color: #F4811F;
+    border-radius: 5px;
+    top: 75%;
+    left: 10%;
+    text-transform: uppercase;
+    text-align: left;
+}
+.layerslide{
+    width: auto;
+    height: auto;
+    margin-left: 50px;
+}
+.layerslide label{
+    position: absolute;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 3px;
+    padding-right: 40px;
+    background-color: white;
+    color: #F4811F;
+    border-radius: 5px;
+    top: 75%;
+    left: 10%;
+    text-transform: uppercase;
+    text-align: left;
+    
 }
